# Be

./: BE_FINAL_PRD_v1.0.md  Cargo.toml  README.md  install.ps1  install.sh  package-lock.json  package.json
.github/workflows/: build-binaries.yml  release.yml
bees/: data-extractor.yaml  file-reviewer.yaml  sentiment-scorer.yaml  text-classifier.yaml  url-scraper.yaml
crates/be-cli/: Cargo.toml
crates/be-cli/src/: main.rs  setup.rs
crates/be-cli/src/commands/: bee.rs  config.rs  jobs.rs  mcp.rs  mod.rs  results.rs  run.rs
crates/be-cli/src/tui/: grid.rs
crates/be-core/: Cargo.toml
crates/be-core/src/: bee.rs  config.rs  dispatcher.rs  lib.rs  runner.rs  schema.rs  store.rs
crates/be-core/src/llm/: anthropic.rs  google.rs  mod.rs  openai.rs
crates/be-core/src/tools/: fetch_url.rs  mod.rs  read_file.rs
scripts/: release.mjs
src/: index.ts
src/commands/: update.ts
src/tools/: fetch-url.ts
